--- a/css/styles_grid.css
+++ b/css/styles_grid.css
@@ -52,7 +52,7 @@ p {
   margin-top: 30px; 
 }
 
-.student {
+.contscts {
   background-color: rgb(163, 163, 163);
   margin-right: 10px;
   margin-bottom: 10px;
@@ -66,18 +66,18 @@ p {
   text-transform: capitalize;
 }
 
-.student img {
+.contscts img {
   border-radius: 50%;
   filter: sepia(0.1);
   transition: 0.8s;
 }
 
-.student img:hover {
+.contscts img:hover {
   filter: sepia(0.8);
 }
 
 @media (min-width: 600px) {
-  .student {
+  .contscts {
       width: 300px;
   }
 }
