--- a/components/nav.html
+++ b/components/nav.html
@@ -36,7 +36,7 @@
                             view</a>
                     </li>
                 </ul>
-                <input type="text" placeholder="Search..">
+                <input type="text" id="input" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
             </div>
         </div>
     </nav>
