--- a/components/nav.html
+++ b/components/nav.html
@@ -36,10 +36,16 @@
                             view</a>
                     </li>
                 </ul>
-                <input type="text" id="input" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+                <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
             </div>
         </div>
     </nav>
+
+
+
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./components/fetched_data.js" type="text/javascript"></script>
+    <script src="./js/main.js" type="text/javascript"></script>
 
 </body>
 
