--- a/components/modal.html
+++ b/components/modal.html
@@ -12,7 +12,23 @@
 </head>
 
 <body>
-    
+
+    <div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">CONTACT INFO</h4>
+        </div>
+        <div class="modal-body">
+          <p class="naziv"></p>
+          <p class="glumci"></p>
+          <p class="plot"></p>
+          <p class="nagrade"></p>
+          <button id="ok" type="button">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
