--- a/components/modalAdd.html
+++ b/components/modalAdd.html
@@ -13,23 +13,11 @@
 
 <body>
 
-    <div id="myModal" class="modal fade">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">CONTACT INFO</h4>
-        </div>
-        <div class="modal-body">
-          <p class="naziv"></p>
-          <p class="glumci"></p>
-          <p class="plot"></p>
-          <p class="nagrade"></p>
-          <button id="ok" type="button">OK</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
+    
 </body>
+
+<script src="./js/bootstrap.min.js" type="text/javascript"></script>
+<script src="./components/fetched_data.js" type="text/javascript"></script>
+<script src="./js/main.js" type="text/javascript"></script>
 
 </html>
