--- a/components/nav.html
+++ b/components/nav.html
@@ -21,22 +21,21 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
+                        <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
                             user</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav right">
                     <li class="nav-item">
                         <a class="nav-link" href="./index_list.html"><img
-                                src="https://img.icons8.com/ios/30/000000/ingredients-list.png">List view</a>
+                                src="../img/icons8-list-32.png">List view</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><img
-                                src="https://img.icons8.com/metro/30/000000/activity-grid-2.png">Grid
+                        <a class="nav-link" href="index.html"><img src="../img/icons8-grid-32.png">Grid
                             view</a>
                     </li>
                 </ul>
-                <input type="text" id="kriterijum" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+                <input type="text" id="kriterijum" placeholder="Search for names.." title="Type in a name">
             </div>
         </div>
     </nav>
