--- a/components/modalAdd.html
+++ b/components/modalAdd.html
@@ -6,18 +6,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./fonts/Roboto/Roboto-Regular.ttf rel='stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/styles_add.css" />
 </head>
 
 <body>
 
-    
-</body>
+    <div class="modal fade" id="myModalAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="false" style=" overflow: scroll; height:auto;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Dodaj kontakt</h4>
+                </div> -->
+                <div id="main-wrapper">
+                    <header>
+                        <div class="header-wrapper">
+                            <div class="row">
+                                <div class="scale">
+                                    <svg class="progress-ring" width="120" height="120" placeholder="0%">
+                                        <circle class="progress-ring__circle" stroke="white" stroke-width="4"
+                                            fill="transparent" r="30" cx="60" cy="60" placeholder="0%" />
+                                        <text fill="#ffffff" x="45" y="65" id="medium"></text>
+                                    </svg>
+                                    <input id="progressbar" type="number" step="10" min="0" max="100" value="0">
+                                </div>
+                            </div>
+                            <h1>Contact Add Form</h1>
+                        </div>
+                    </header>
+                    <div id="form-wrapper">
+                        <form>
+                            <hr>
+                            <div class="form-group" id="title">
+                                <label for="title float-label-control">Titula:</label>
+                                <div class="row form-animation">
+                                    <span id="steps1" class="animation-circle steps">1</span>
+                                    <select type="text" class="form-control" id="id_title" required>
+                                        <option value="Mr.">Mr.</option>
+                                        <option value="Ms.">Ms.</option>
+                                        <option value="Mrs.">Mrs.</option>
+                                    </select>
 
-<script src="./js/bootstrap.min.js" type="text/javascript"></script>
-<script src="./components/fetched_data.js" type="text/javascript"></script>
-<script src="./js/main.js" type="text/javascript"></script>
+                                </div>
+                            </div>
+                            <div class="form-group" id="ime">
+                                <label for="firstname float-label-control">Ime:</label>
+                                <div class="row form-animation">
+                                    <span id="steps1" class="animation-circle steps">2</span>
+                                    <input type="text" class="form-control" id="id_firstname" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="lastname float-label-control">Prezime:</label>
+                                <div class="row form-animation">
+                                    <span id="steps2" class="animation-circle steps">3</span>
+                                    <input type="text" class="form-control" id="id_lastname" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="age float-label-control">Godine:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">11</span>
+                                    <input type="text" class="form-control" id="id_age" required>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="email float-label-control">Email adresa:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">4</span>
+                                    <input name="email" type="email" class="form-control" id="id_email" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="phone float-label-control">Broj telefona:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">5</span>
+                                    <input type="text" class="form-control" id="id_phone" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="cell float-label-control">Broj mobilnog telefona:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">6</span>
+                                    <input type="text" class="form-control" id="id_cell" required>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="state float-label-control">Drzava:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">7</span>
+                                    <input type="text" class="form-control" id="id_state" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="city float-label-control">Grad:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">8</span>
+                                    <input type="text" class="form-control" id="id_city" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="street float-label-control">Ulica:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">9</span>
+                                    <input type="text" class="form-control" id="id_street" required>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="nat float-label-control">Drzavljanstvo:</label>
+                                <div class="row form-animation">
+                                    <span id="steps3" class="animation-circle steps">10</span>
+                                    <input type="text" class="form-control" id="id_nat" required>
+                                </div>
+                            </div>
+                            <br>
+                            <button type="submit" class="btn btn-primary submit" onclick="">Submit request</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/modals.js"></script>
+    <script src="../js/progressbar.js"></script>
+</body>
 
 </html>
