--- a/components/modal_info.html
+++ b/components/modal_info.html
@@ -38,7 +38,8 @@
 </body>
 
 <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-<script src="./components/fetched_data.js" type="text/javascript"></script>
+<script src="./js/fetched_data.js" type="text/javascript"></script>
 <script src="./js/main.js" type="text/javascript"></script>
+<script src="../js/modals.js" type="text/javascript"></script>
 
 </html>
