--- a/components/nav.html
+++ b/components/nav.html
@@ -21,8 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
-                            user</a>
+                        <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add user</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav right">
@@ -43,8 +42,8 @@
 
 
     <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="./components/fetched_data.js" type="text/javascript"></script>
-    <script src="./js/main.js" type="text/javascript"></script>
+    <script src="./js/modals.js" type="text/javascript"></script>
+
 
 </body>
 
