--- a/components/nav.html
+++ b/components/nav.html
@@ -1,50 +1,26 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add user</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index_list.html"><img
-                                src="../img/icons8-list-32.png">List view</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"><img src="../img/icons8-grid-32.png">Grid
-                            view</a>
-                    </li>
-                </ul>
-                <input type="text" id="kriterijum" placeholder="Search for names.." title="Type in a name">
-            </div>
+<nav class="navbar navbar-expand-md navbar-dark">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
+                        user</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav right">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index_list.html"><img src="../img/icons8-list-32.png">List view</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html"><img src="../img/icons8-grid-32.png">Grid
+                        view</a>
+                </li>
+            </ul>
+            <input type="text" id="kriterijum" placeholder="Search for names.." title="Type in a name">
         </div>
-    </nav>
-
-
-
-    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="./js/modals.js" type="text/javascript"></script>
-
-
-</body>
-
-</html>
+    </div>
+</nav>
