--- a/components/nav.html
+++ b/components/nav.html
@@ -13,10 +13,10 @@
             </ul>
             <ul class="navbar-nav right">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index_list.html"><img src="../img/icons8-list-32.png">List view</a>
+                    <a class="nav-link" href="./index_list.html"><img src="https://img.icons8.com/windows/30/000000/menu.png">List view</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html"><img src="../img/icons8-grid-32.png">Grid
+                    <a class="nav-link" href="index.html"><img src="https://img.icons8.com/ios-glyphs/30/000000/grid.png">Grid
                         view</a>
                 </li>
             </ul>
