--- a/components/nav.html
+++ b/components/nav.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a id="add" class="nav-link"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
+                    <a id="add" class="nav-link pointer"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
                         user</a>
                 </li>
             </ul>
