--- a/components/nav.html
+++ b/components/nav.html
@@ -20,7 +20,7 @@
                         view</a>
                 </li>
             </ul>
-            <input type="text" id="kriterijum" placeholder="Search for names.." title="Type in a name">
+            <input type="text" id="kriterijum" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"">
         </div>
     </div>
 </nav>
