--- a/components/nav.html
+++ b/components/nav.html
@@ -7,20 +7,23 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a id="add" class="nav-link pointer"><img src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
+                    <a id="add" class="nav-link pointer"><img
+                            src="https://img.icons8.com/dotty/30/000000/person-male.png">Add
                         user</a>
                 </li>
             </ul>
             <ul class="navbar-nav right">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index_list.html"><img src="https://img.icons8.com/windows/30/000000/menu.png">List view</a>
+                    <a class="nav-link" href="./index_list.html"><img
+                            src="https://img.icons8.com/windows/30/000000/menu.png">List view</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html"><img src="https://img.icons8.com/ios-glyphs/30/000000/grid.png">Grid
+                    <a class="nav-link" href="index.html"><img
+                            src="https://img.icons8.com/ios-glyphs/30/000000/grid.png">Grid
                         view</a>
                 </li>
             </ul>
-            <input type="text" id="kriterijum" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"">
+            <input type="text" id="kriterijum" onkeyup="search()" placeholder="Search for names.." title="Type in a name"">
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
